    add a versioned Replaces to grub-yeeloong just in case (closes:
    #586526).
  * Remove qemu-system build-dependency on hurd-i386, where it doesn't seem
    to exist.  Disable tests if qemu-system-i386 isn't available.
  * Mark "upgrade-from-grub-legacy" paragraph in
    grub-pc/chainload_from_menu.lst as untranslatable.
  * Update Homepage field (thanks, Sedat Dilek).

  [ Updated translations ]
  * Ukrainian (uk.po) by Yatsenko Alexandr / Borys Yanovych (closes:
    #586611).
  * Indonesian (id.po) by Arief S Fitrianto (closes: #586799).
  * Swedish (sv.po) by Martin Bagge (closes: #586827).
  * Persian (fa.po) by Behrad Eslamifar (closes: #587085).
  * French (fr.po) by Christian Perrier (closes: #587383).

 -- Colin Watson <cjwatson@debian.org>  Sun, 20 Jun 2010 09:06:05 +0100

grub2 (1.98+20100617-1) unstable; urgency=low

  * New Bazaar snapshot.
    - Fix i386-pc prefix handling with nested partitions (closes: #585068).

  * When running grub-pc.postinst from upgrade-from-grub-legacy, tell it to
    disregard the fact that /boot/grub/stage2 and /boot/grub/menu.lst still
    exist (closes: #550477).
  * Touch a marker file when grub-install is run but GRUB Legacy files are
    still around.  If that marker file is present, pretend that GRUB Legacy
    files are missing when upgrading.
  * If GRUB Legacy files are present when upgrading, scan boot sectors of
    all disks for GRUB 2.  If we find GRUB 2 installed anywhere, then ask
    the user if they want to finish conversion to GRUB 2, and warn them that
    not doing so may render the system unbootable (closes: #586143).  Thanks
    to Sedat Dilek for helping to narrow down this bug.
  * Leaving grub-pc/install_devices empty makes sense in some situations,
    but more often than not is a mistake.  On the other hand, automatically
    selecting all disk devices would upset some people too.  Compromise by
    simply asking for explicit confirmation if grub-pc/install_devices is