@@ -27,3 +27,19 @@ Default: quiet
 _Description: kFreeBSD default command line:
  The following string will be used as kFreeBSD parameters for the default menu
  entry but not for the recovery mode.
+
+Template: grub2/device_map_regenerated
+Type: note
+_Description: /boot/grub/device.map has been regenerated
+ The file /boot/grub/device.map has been rewritten to use stable device
+ names.  In most cases, this should significantly reduce the need to change
+ it in future, and boot menu entries generated by GRUB should not be
+ affected.
+ .
+ However, since you have more than one disk in your system, it is possible
+ that you were depending on the old device map.  Please check whether you
+ have any custom boot menu entries that rely on GRUB's (hdN) drive
+ numbering, and update them if necessary.
+ .
+ If you do not understand this message, or if you do not have any custom
+ boot menu entries, you can ignore this message.
